openmediavault (0.2.6.1) stable; urgency=low

  * Execute the cron job command in a shell when pressing the 'Run' button
    in the WebGUI.
  * Fix bugs in omv-initfs script and RPC backend
  * Mantis 0000325: All files deleted after deleting FTP share

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Dec 2011 16:22:25 +0100

openmediavault (0.2.6.0) stable; urgency=low

  * Fix various bugs.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 Dec 2011 19:51:55 +0100

openmediavault (0.2.5.9) stable; urgency=low

  * Configure catch-all entry for hostname in /etc/postfix/generic. Thus all
    emails send via mail command should use the configured sender address.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 17 Dec 2011 02:02:19 +0100

openmediavault (0.2.5.8) stable; urgency=low

  * Fix bug in regex to parse date/time field in RSync logfile
  * Modify various default settings for SMB/CIFS, FTP and TFTP
  * Mantis 0000312: Shared Folders - Show Label not only Volume
  * Mantis 0000314: Can't add shared folder with same name on another volume

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 15 Dec 2011 21:41:01 +0100

openmediavault (0.2.5.7) stable; urgency=low

  * Fix bug in omv-firstaid when configuring the network interface.
  * Add environment variable OMV_HTTPREQUEST_TIMEOUT to modify the WebGUI HTTP
    request timeout. Defaults to 60000 milliseconds.
  * Improve monitoring implementation (via monit)
  * Mantis 0000104: General Settings: Error while changing session timeout
  * Mantis 0000294: creating two smb shares with the same name on two
    shared folders
  * Mantis 0000300: Change bond mode fails and requires reboot
  * Mantis 0000303: Samba log settings prevent non-error logging
  * Mantis 0000306: Diagnostics - System logs do not display correct order
    of column 'Date & Time'

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 09 Dec 2011 19:57:03 +0100
