@@ -209,8 +209,8 @@ case "$1" in
 			omv_config_add_element "//system/network/interfaces/*" "options" ""
 		fi
 		if dpkg --compare-versions "$2" lt-nl "0.2.5.4"; then
-			omv_config_add_element "//system/crontab/job/*" "enable" "1"
-			omv_config_add_element "//services/rsync/jobs/job/*" "enable" "1"
+			omv_config_add_element "//system/crontab/job" "enable" "1"
+			omv_config_add_element "//services/rsync/jobs/job" "enable" "1"
 			omv-mkconf cron
 			omv-mkconf rsync
 		fi
@@ -253,6 +253,10 @@ case "$1" in
 		if dpkg --compare-versions "$2" lt-nl "0.2.6.0"; then
 			omv-mkconf postfix
 			invoke-rc.d postfix restart
+		fi
+		if dpkg --compare-versions "$2" lt-nl "0.2.6.1"; then
+			omv_config_add_element "//system/crontab/job" "sendemail" "0"
+			omv-mkconf cron
 		fi
 	;;
 
