@@ -139,6 +139,7 @@
 			<job>
 				<uuid>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</uuid>
 				<enable>0|1</enable>
+				<sendemail>0|1<sendemail>
 				<type>reboot|shutdown|userdefined</type>
 				<comment>xxx</comment>
 				<minute>[00-59|*]</minute>
